@@ -1,16 +1,3 @@
-<%
-unless @maxruntime
-  # Limit this to 4 hours, if users want more than that, they'll just
-  # need to set maxruntime themselves.
-  maxage = [@interval.to_i * 60,14400].min
-else
-  maxage = @maxruntime.to_i * 60
-end
-
-if scope.lookupvar('::pupmod::splay')
-  maxage = maxage + scope.lookupvar('::pupmod::splaylimit').to_i + 10
-end
--%>
 #!/bin/bash
 
 PATH="/opt/puppetlabs/bin:/usr/kerberos/sbin:/usr/kerberos/bin:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin";
@@ -18,20 +5,15 @@ PATH="/opt/puppetlabs/bin:/usr/kerberos/sbin:/usr/kerberos/bin:/usr/local/sbin:/
 now=0;
 filedate=0;
 
-puppet_lockfile="$(puppet config print agent_disabled_lockfile)";
 puppet_run_lockfile="$(puppet config print agent_catalog_run_lockfile)";
+puppet_disable_lockfile="$(puppet config print agent_disabled_lockfile)";
 
-# This handles willful disabling of Puppet and service status (not cron runs)
-if [ -f "${puppet_lockfile}" ]; then
-
-  # Exit if maxruntime == 0.  This means that you wish to never forcibly unlock
-  # the system.
-  if [ "<%= @maxruntime %>" == "0" ]; then
-    exit 0;
-  fi
+<% if @break_puppet_lock -%>
+# This handles forcibly enabling puppet agent if _max_disable_time is exceeded.
+if [ -f "${puppet_disable_lockfile}" ]; then
 
   now=$(date "+%s");
-  filedate=$(stat --printf="%Z" ${puppet_lockfile});
+  filedate=$(stat --printf="%Z" ${puppet_disable_lockfile});
 
   /sbin/service puppet status &> /dev/null;
   pup_status=$?;
@@ -48,31 +30,32 @@ if [ -f "${puppet_lockfile}" ]; then
   # about it.
   # If you want to disable puppet then disable the cron job and the service and
   # set the lockfile.
-  if [[ ${pup_status} -ne 0 && $(( ${now} - ${filedate} )) -gt <%= maxage %> ]]; then
-    /bin/logger -s -p 'local6.warn' -t 'puppetd' "Puppet disable forcibly unlocked.";
-    /bin/rm -f "${puppet_lockfile}";
+  if [[ ${pup_status} -ne 0 && $(( ${now} - ${filedate} )) -gt <%= @_max_disable_time * 60 %> ]]; then
+    /bin/logger -s -p 'local6.warn' -t 'puppet' "Puppet disable forcibly unlocked.";
+    /bin/rm -f "${puppet_disable_lockfile}";
   fi
 fi
+<% end -%>
 
-# Get the process listing to check for "hung" cron job runs
-pup_status="$(ps -p "$(pidof ruby)" -o args --no-headers 2> /dev/null | grep 'puppet agent')";
-
-# This handles "hung" puppet processes
+# This handles puppet processes which have been running longer than maxruntime
 if [ -f "${puppet_run_lockfile}" ]; then
+
+  # Get the process listing to check for "hung" cron job runs
+  pup_status="$(ps -p "$(pidof ruby)" -o args --no-headers 2> /dev/null | grep 'puppet agent')";
 
   now=$(date "+%s");
   filedate=$(stat --printf="%Z" ${puppet_run_lockfile});
 
   # If we've gotten here, then Puppet has not completed within threshold
-  if [[ -n "${pup_status}" && $(( ${now} - ${filedate} )) -gt <%= maxage %> ]]; then
-    pkill puppet;
+  if [[ -n "${pup_status}" && $(( ${now} - ${filedate} )) -gt <%= @maxruntime * 60 %> ]]; then
+    pkill -x puppet;
     wait;
-    /bin/logger -s -p 'local6.warn' -t 'puppetd' "Puppet processes forcibly killed.";
+    /bin/logger -s -p 'local6.warn' -t 'puppet' "Puppet processes forcibly killed.";
     /bin/rm -f "${puppet_run_lockfile}";
   fi
 fi
 
 # Run Puppet if we don't have any locks
-if [ ! -f "${puppet_lockfile}" ] && [ ! -f "${puppet_run_lockfile}" ]; then
+if [ ! -f "${puppet_disable_lockfile}" ] && [ ! -f "${puppet_run_lockfile}" ]; then
   puppet agent --onetime --no-daemonize --no-show_diff;
 fi
